--- a/Laboratorium 3 - App/Views/Contact/Create.cshtml
+++ b/Laboratorium 3 - App/Views/Contact/Create.cshtml
@@ -1,36 +1,38 @@
 ﻿@model Contact
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
 }
-<h1>Dodaj nowy kontakt</h1>
+<h1>Utworzenie kontaktu</h1>
 <form asp-controller="Contact" asp-action="Create" method="post">
-    <div class="form-grup">
-        <label asp-for="Name"></label>
-        <div>
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
+    @*<div asp-validation-summary="All"></div>*@
+    <div class="mb-3">
+        <label asp-for="Name">Imię</label>
         <input class="form-control" asp-for="Name" />
-    </div>
-    <div class="form-grup">
-        <label asp-for="Email"></label>
-        <div>
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <input class="form-control" asp-for="Email" />
-    </div>
-    <div class="form-grup">
-        <label asp-for="Phone"></label>
-        <div>
-            <span asp-validation-for="Phone" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <select class="form-control" asp-for="OrganizationId" asp-items="@Model.Organizations"></select>
-    </div>
-    <div class="form-group">
-        <button type="submit">Zapisz</button>
+        <span class="text-danger" asp-validation-for="Name"></span>
     </div>
 
+    <div class="mb-3">
+        <label asp-for="Email">E-mail</label>
+        <input class="form-control" asp-for="Email" />
+        <span class="text-danger" asp-validation-for="Email"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Phone">Numer telefonu</label>
+        <input class="form-control" asp-for="Phone" />
+        <span class="text-danger" asp-validation-for="Phone"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Birth">Data urodzenia</label>
+        <input class="form-control" asp-for="Birth" />
+        <span class="text-danger" asp-validation-for="Birth"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="OrganizationId">Organizacja</label>
+        <select class="form-control" asp-for="OrganizationId" asp-items=@Model.Organizations></select>
+    </div>
+
+    <button type="submit">Wyslij</button>
 </form>
