--- a/Laboratorium 3 - App/Views/Contact/Details.cshtml
+++ b/Laboratorium 3 - App/Views/Contact/Details.cshtml
@@ -1,4 +1,5 @@
-﻿﻿@*
+﻿@model Contact
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -15,7 +16,11 @@
     <dd>@Model.Email</dd>
     <dt>Telefon</dt>
     <dd>@Model.Phone</dd>
-
+    <dt>Organizacja</dt>
+    <div class="mb-3">
+       
+        <select  disabled class="form-control" asp-for="OrganizationId" asp-items=@Model.Organizations></select>
+    </div>
 
 
     
