--- a/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
+++ b/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Create">Dodaj kontakt</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="">Lista kontaktów</a>
+                        </li>
 
                     </ul>
                 </div>
