--- a/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
+++ b/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="">Lista kontaktów</a>
                         </li>
-
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
