--- a/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
+++ b/Laboratorium 3 - App/Views/Shared/_Layout.cshtml
@@ -32,8 +32,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="">Lista kontaktów</a>
                         </li>
-                        <partial name="_LoginPartial" />
                     </ul>
+                    <div class="navbar-nav">
+                        <partial name="_LoginPartial" />
+                    </div>
                 </div>
             </div>
         </nav>
